--- a/Instructions/Starter_Code.ipynb
+++ b/Instructions/Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3t/nb3d_nhd51d4pjxgz3szq0nr0000gn/T/ipykernel_31533/2036532070.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "/var/folders/3t/nb3d_nhd51d4pjxgz3szq0nr0000gn/T/ipykernel_32517/2036532070.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  application_df.drop([\"EIN\",\"NAME\"],1).values\n"
      ]
     },
@@ -321,7 +321,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,17 +367,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T10\n",
+      "T9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Look at APPLICATION_TYPE value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "# Look at APPLICATION_TYPE value counts for binning\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +395,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39m# Choose a cutoff value and create a list of application types to be replaced\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39m# use the variable name `application_types_to_replace`\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=2'>3</a>\u001b[0m \u001b[39m#  YOUR CODE GOES HERE\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=3'>4</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=4'>5</a>\u001b[0m \u001b[39m# Replace in dataframe\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m app \u001b[39min\u001b[39;00m application_types_to_replace:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=6'>7</a>\u001b[0m     application_df[\u001b[39m'\u001b[39m\u001b[39mAPPLICATION_TYPE\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m application_df[\u001b[39m'\u001b[39m\u001b[39mAPPLICATION_TYPE\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreplace(app,\u001b[39m\"\u001b[39m\u001b[39mOther\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/UTSA-VIRT-DATA-PT-12-2021-U-C/02-Homework/21-Deep-Learning/Instructions/Starter_Code.ipynb#ch0000005?line=8'>9</a>\u001b[0m \u001b[39m# Check to make sure binning was successful\u001b[39;00m\n",
+      "\u001b[1;32m/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39m# Choose a cutoff value and create a list of application types to be replaced\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39m# use the variable name `application_types_to_replace`\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=2'>3</a>\u001b[0m \u001b[39m#  YOUR CODE GOES HERE\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=3'>4</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=4'>5</a>\u001b[0m \u001b[39m# Replace in dataframe\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m app \u001b[39min\u001b[39;00m application_types_to_replace:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=6'>7</a>\u001b[0m     application_df[\u001b[39m'\u001b[39m\u001b[39mAPPLICATION_TYPE\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m application_df[\u001b[39m'\u001b[39m\u001b[39mAPPLICATION_TYPE\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreplace(app,\u001b[39m\"\u001b[39m\u001b[39mOther\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=8'>9</a>\u001b[0m \u001b[39m# Check to make sure binning was successful\u001b[39;00m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'application_types_to_replace' is not defined"
      ]
     }
