--- a/Instructions/Starter_Code.ipynb
+++ b/Instructions/Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3t/nb3d_nhd51d4pjxgz3szq0nr0000gn/T/ipykernel_32517/2036532070.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "/var/folders/3t/nb3d_nhd51d4pjxgz3szq0nr0000gn/T/ipykernel_43290/2036532070.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  application_df.drop([\"EIN\",\"NAME\"],1).values\n"
      ]
     },
@@ -321,7 +321,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,25 +367,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T10\n",
-      "T9\n"
-     ]
+     "data": {
+      "text/plain": [
+       "T3     27037\n",
+       "T4      1542\n",
+       "T6      1216\n",
+       "T5      1173\n",
+       "T19     1065\n",
+       "T8       737\n",
+       "T7       725\n",
+       "T10      528\n",
+       "T9       156\n",
+       "T13       66\n",
+       "T12       27\n",
+       "T2        16\n",
+       "T25        3\n",
+       "T14        3\n",
+       "T29        2\n",
+       "T15        2\n",
+       "T17        1\n",
+       "Name: APPLICATION_TYPE, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Look at APPLICATION_TYPE value counts for binning\n"
+    "# Look at APPLICATION_TYPE value counts for binning\n",
+    "value_count = application_df['APPLICATION_TYPE'].value_counts()\n",
+    "value_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
