--- a/Instructions/Starter_Code.ipynb
+++ b/Instructions/Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,25 +406,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'application_types_to_replace' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39m# Choose a cutoff value and create a list of application types to be replaced\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39m# use the variable name `application_types_to_replace`\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=2'>3</a>\u001b[0m \u001b[39m#  YOUR CODE GOES HERE\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=3'>4</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=4'>5</a>\u001b[0m \u001b[39m# Replace in dataframe\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m app \u001b[39min\u001b[39;00m application_types_to_replace:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=6'>7</a>\u001b[0m     application_df[\u001b[39m'\u001b[39m\u001b[39mAPPLICATION_TYPE\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m application_df[\u001b[39m'\u001b[39m\u001b[39mAPPLICATION_TYPE\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreplace(app,\u001b[39m\"\u001b[39m\u001b[39mOther\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mindy/Documents/GitHub/Charity-Funding-Predictor/Instructions/Starter_Code.ipynb#ch0000005?line=8'>9</a>\u001b[0m \u001b[39m# Check to make sure binning was successful\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'application_types_to_replace' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "T3       27037\n",
+       "Other     2266\n",
+       "T4        1542\n",
+       "T6        1216\n",
+       "T5        1173\n",
+       "T19       1065\n",
+       "Name: APPLICATION_TYPE, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
+    "application_types_to_replace = list(value_count[value_count< 300].index)\n",
     "# use the variable name `application_types_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -436,39 +441,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "C1000    17326\n",
-       "C2000     6074\n",
-       "C1200     4837\n",
-       "C3000     1918\n",
-       "C2100     1883\n",
-       "         ...  \n",
-       "C1370        1\n",
-       "C4120        1\n",
-       "C2600        1\n",
-       "C2190        1\n",
-       "C6100        1\n",
-       "Name: CLASSIFICATION, Length: 71, dtype: int64"
+       "T3       27037\n",
+       "Other     2266\n",
+       "T4        1542\n",
+       "T6        1216\n",
+       "T5        1173\n",
+       "T19       1065\n",
+       "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at CLASSIFICATION value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "class_count = application_df['APPLICATION_TYPE'].value_counts()\n",
+    "class_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -501,40 +502,40 @@
        "C6000       15\n",
        "C1250       14\n",
        "C8200       11\n",
-       "C1278       10\n",
        "C1238       10\n",
-       "C1237        9\n",
+       "C1278       10\n",
        "C1235        9\n",
+       "C1237        9\n",
        "C7210        7\n",
-       "C1720        6\n",
        "C2400        6\n",
+       "C1720        6\n",
        "C4100        6\n",
        "C1257        5\n",
        "C1600        5\n",
-       "C0           3\n",
        "C1260        3\n",
        "C2710        3\n",
+       "C0           3\n",
+       "C3200        2\n",
        "C1234        2\n",
        "C1246        2\n",
        "C1267        2\n",
-       "C3200        2\n",
        "C1256        2\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "class_count[class_count > 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -549,15 +550,16 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
+    "replacement = list()\n",
     "# use the variable name `classifications_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = list(class_count[class_count< 1000].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -569,12 +571,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EIN</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>ASK_AMT</th>\n",
+       "      <th>IS_SUCCESSFUL</th>\n",
+       "      <th>NAME_1 DAY RANCH RESCUE AND RURAL OKLAHOMA ANIMAL RESOURCE INC</th>\n",
+       "      <th>NAME_100 BLACK MEN OF AMERICA</th>\n",
+       "      <th>NAME_100 BLACK MEN OF MEMPHIS INC</th>\n",
+       "      <th>NAME_100 BLACK MEN OF WEST GEORGIA INC</th>\n",
+       "      <th>NAME_1150 WEBSTER STREET INC</th>\n",
+       "      <th>NAME_116TH CAVALRY REGIMENT CHAPTER OF THE US CAVALRY &amp; ARMOR ASSOCIATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>INCOME_AMT_1-9999</th>\n",
+       "      <th>INCOME_AMT_10000-24999</th>\n",
+       "      <th>INCOME_AMT_100000-499999</th>\n",
+       "      <th>INCOME_AMT_10M-50M</th>\n",
+       "      <th>INCOME_AMT_1M-5M</th>\n",
+       "      <th>INCOME_AMT_25000-99999</th>\n",
+       "      <th>INCOME_AMT_50M+</th>\n",
+       "      <th>INCOME_AMT_5M-10M</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS_N</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS_Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10520599</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10531628</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108590</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10547893</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10553066</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6692</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10556103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>142590</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 19610 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        EIN  STATUS  ASK_AMT  IS_SUCCESSFUL  \\\n",
+       "0  10520599       1     5000              1   \n",
+       "1  10531628       1   108590              1   \n",
+       "2  10547893       1     5000              0   \n",
+       "3  10553066       1     6692              1   \n",
+       "4  10556103       1   142590              1   \n",
+       "\n",
+       "   NAME_1 DAY RANCH RESCUE AND RURAL OKLAHOMA ANIMAL RESOURCE INC  \\\n",
+       "0                                                  0                \n",
+       "1                                                  0                \n",
+       "2                                                  0                \n",
+       "3                                                  0                \n",
+       "4                                                  0                \n",
+       "\n",
+       "   NAME_100 BLACK MEN OF AMERICA  NAME_100 BLACK MEN OF MEMPHIS INC  \\\n",
+       "0                              0                                  0   \n",
+       "1                              0                                  0   \n",
+       "2                              0                                  0   \n",
+       "3                              0                                  0   \n",
+       "4                              0                                  0   \n",
+       "\n",
+       "   NAME_100 BLACK MEN OF WEST GEORGIA INC  NAME_1150 WEBSTER STREET INC  \\\n",
+       "0                                       0                             0   \n",
+       "1                                       0                             0   \n",
+       "2                                       0                             0   \n",
+       "3                                       0                             0   \n",
+       "4                                       0                             0   \n",
+       "\n",
+       "   NAME_116TH CAVALRY REGIMENT CHAPTER OF THE US CAVALRY & ARMOR ASSOCIATION  \\\n",
+       "0                                                  0                           \n",
+       "1                                                  0                           \n",
+       "2                                                  0                           \n",
+       "3                                                  0                           \n",
+       "4                                                  0                           \n",
+       "\n",
+       "   ...  INCOME_AMT_1-9999  INCOME_AMT_10000-24999  INCOME_AMT_100000-499999  \\\n",
+       "0  ...                  0                       0                         0   \n",
+       "1  ...                  1                       0                         0   \n",
+       "2  ...                  0                       0                         0   \n",
+       "3  ...                  0                       1                         0   \n",
+       "4  ...                  0                       0                         1   \n",
+       "\n",
+       "   INCOME_AMT_10M-50M  INCOME_AMT_1M-5M  INCOME_AMT_25000-99999  \\\n",
+       "0                   0                 0                       0   \n",
+       "1                   0                 0                       0   \n",
+       "2                   0                 0                       0   \n",
+       "3                   0                 0                       0   \n",
+       "4                   0                 0                       0   \n",
+       "\n",
+       "   INCOME_AMT_50M+  INCOME_AMT_5M-10M  SPECIAL_CONSIDERATIONS_N  \\\n",
+       "0                0                  0                         1   \n",
+       "1                0                  0                         1   \n",
+       "2                0                  0                         1   \n",
+       "3                0                  0                         1   \n",
+       "4                0                  0                         1   \n",
+       "\n",
+       "   SPECIAL_CONSIDERATIONS_Y  \n",
+       "0                         0  \n",
+       "1                         0  \n",
+       "2                         0  \n",
+       "3                         0  \n",
+       "4                         0  \n",
+       "\n",
+       "[5 rows x 19610 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "X = pd.get_dummies(application_df)\n",
+    "X.head()"
    ]
   },
   {
@@ -584,10 +829,9 @@
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
     "\n",
-    "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "\n",
+    "# Split the preprocessed data into a training and testing dataset\n"
    ]
   },
   {
