--- a/charity.ipynb
+++ b/charity.ipynb
@@ -852,12 +852,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export our model to HDF5 file\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.save('AlphabetSoupCharity.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis\n",
+    "\n",
+    "The dataset was used to create an algorithm to predict whether or not applicants would be successfully funded, and contained more than 34,000 organizations that have received funding from Alphabet Soup. Within the dataset, there are ten columns containing metadata about the organizations.\n",
+    "\n",
+    "\n",
+    "During the data processing, irrelevant information was removed or replaced. For example, the EIN and Name were dropped from the model due to high fluctuation, classification and application types were replaced with \"Other.\" Finally, categorical values were encoded by pd.get_dummies. \n",
+    "\n",
+    "The neural network was applied to each model. The number of features dictated the number of hidden nodes. Two hidden nodes at 300 and 50 epochs were used for the first attempt. The first attempt reached 71% accuracy, so the model needed to be compiled a second time in order to reach a 75% accuracy. \n",
+    "Screen Shot 2022-05-24 at 11.11.03 AM\n",
+    "\n",
+    "The second attempt featured three nodes at 400 and fifty epochs. After training the model, the accuracy met the 75% required accuracy. \n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"../Screen Shot 2022-05-24 at 11.11.03 AM.png\" alt=\"1st attempt\" />\n"
    ]
   }
  ],
